tests/errors/overflow.asm
FUNC LABEL 0
    MOV STK A VAL 66
    CAL VAL 0
    RET
